liten fix i mongo url

--- a/c#ApiLayout/appsettings.json
+++ b/c#ApiLayout/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "MDB_Settings": {
-    "apiUrl": "mongodb+srv://emil:admin@cluster0.zjszrjd.mongodb.net/?retryWrites=true&w=majority"
+    "apiUrl": ""
   },
   "AllowedHosts": "*"
 }
